--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,4 +94,6 @@ h1 {
     padding-right: 15px;
     margin-top: 10px;
     text-shadow: 1px 1px #000;
+    text-align: left;
+    padding-left: 15px;
 }
