--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,3 +161,32 @@ div .empty-top-ten {
     text-align: center;
     width: 240px;
 }
+
+/*Media Queries*/
+@media screen and (max-width: 800px) {
+    .display-area {
+        width: 600px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .display-area {
+        width: 550px;
+    }
+
+    .quiz-info {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #high-scores, .quiz-info span {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .display-area {
+        width: 350px;
+    }
+}
